--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+/* image and divs styling */
 .img {
     border-radius: 15px;
     border: solid 2px;
@@ -12,13 +14,17 @@
     text-align: center;
     border: solid 1px black;
     border-radius: 15px;
-    background-color: #dcdcdc;
+    background-color: #dcdcdc98;
 }
 
 .div-bg{border: solid 1px black;
    border-radius: 15px;
-   background-color: #dcdcdc;
+   background-color: #dcdcdc34;
 }
+
+.header-bg{background-color: silver;}
+
+/* offer section styling */
 
 h5.para-top{padding-top: 15px;}
 
@@ -30,22 +36,24 @@ p.contact {margin: 10px 0;}
 
 h4.text {margin-bottom: 0;}
 
+.offer{display: block; margin:auto;}
+
+.para-offer{padding: 10px 5px; margin-bottom:  0;}
+
+/* form style */
+
 .form{width: 200px;
 display:block;
 margin: auto;}
 
 label{display: block;padding: 10px 0;}
 
-.sub-btn{border-radius: 10px;  background-color: green; width: 45%; margin-left: 30%; margin-top: 15px; }
+.sub-btn{border-radius: 10px;  background-color: rgba(163, 165, 163, 0.288); width: 45%; margin-left: 30%; margin-top: 15px; }
 
-.offer{display: block; margin:auto;}
-
-.para-offer{padding: 10px 5px; margin-bottom:  0;}
-
+/* about us section  */
 
 .about-us-img-l{float: left; width: 60%; padding: 5px; margin: 5px 10px 0px 5px; }
 .about-us-img-r{float: right; width: 60%; padding: 5px; margin: 5px 5px 0px 10px;}
-
 
 .img-float-l{
    padding: 5px; margin-bottom: 0; border-radius: 10px
@@ -69,10 +77,12 @@ div.story-slika{overflow-y: scroll;
    height: 281px;}
 
 .row-navbar {
-    background-color: silver;
-    border-radius: 15px;
-    padding: 2vw 7vw;
+   background-color: silver;
+   border-radius: 15px;
+   padding: 2vw 7vw;
 }
+
+/* footer style  */
 
 p.footer{display:inline-block;
    margin: 0;
@@ -83,7 +93,7 @@ p.footer{display:inline-block;
 .footer-div{text-align: center;}
 
 .footer a {text-decoration: none;
-   color: black;
+   color: rgba(0, 0, 0, 0.205);
 }
 
 
@@ -99,18 +109,18 @@ p.footer{display:inline-block;
  ); */
 
 
-
 @media screen  and (max-width:767px) {
    #img1, #img2, #img3, #img4 {display: block; width: 100%;}
    #hide-sm, #hide-sm-1 {display: none;}
    div.hide-lg {display: none;}
    div.about-us-img-l, div.about-us-img-r, div.about-us-img-r {float: none; width: 100%; margin: 0;}
    ul li a {font-size: 18px;}
+   #retreat{padding: 15px 0;}
 }
 
 
 
-@media screen and (min-width:768px) and (max-width:1540px) {
+@media screen and (min-width:550px) and (max-width:1540px) {
    div.hide-lg{display: none;}
    .about-us-img-l{float: left; width: 50%; padding: 5px; margin: 5px 10px 0px 5px; }
    .about-us-img-r{float: right; width: 50%; padding: 5px; margin: 5px 5px 0px 10px;}
@@ -123,9 +133,12 @@ p.footer{display:inline-block;
    #offer-img{height: 430px;}
    p.details{padding-top: 6%; font-size: 1.3vw;}
    p.details-1{padding-top: 1%; font-size: 1.3vw;}
+   p.details-2{padding-top: 14%; font-size: 1.3vw;}
    ul li a {font-size: 1.4vw;}
    div.para-offer{font-size: 1.3vw;}
    p.para-top{font-size: 1.3vw;}
+   #retreat{padding: 30px 0;}
+  
 }
 
     
